--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
     "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
     "mongodb": "latest",
+    "mongoose": "^8.16.4",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "resend": "latest",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-        "server-only": "^0.0.1"
-
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22",
