--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "resend": "latest",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.5",
